[project]
name = "multiagent-using-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-ollama>=0.3.3",
    "langchain[anthropic]>=0.3.26",
    "langgraph>=0.5.0",
    "python-dotenv>=1.1.1",
]
